update some class based on sonarqube seggutions